--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -8,6 +8,10 @@ label {
   font-weight: 500;
 }
 
+label.post-challenge {
+  width: 200%;
+}
+
 /* Added by Ivan for CLEF submission form */
 .required {
     color: #d23934;
